# valkyrie-wit

./: .gitignore  Cargo.toml  package.json
.cargo/: config.toml
.run/: Build All.run.xml  Test All.run.xml  build-release.sh  build.sh
projects/valkyrie-ffi/: Cargo.toml
projects/valkyrie-ffi/src/: lib.rs
projects/valkyrie-ffi/src/helpers/: mod.rs
projects/valkyrie-ffi/src/imports/: mod.rs
projects/valkyrie-ffi/src/imports/visit_types/: mod.rs  visit_functions.rs
projects/valkyrie-ffi/tests/: main.rs  readme.md
projects/valkyrie-ffi/tests/homestar/: host.vk  legion.json
projects/valkyrie-ffi/tests/wasi/: blobstore.vk  cli.vk  clocks.vk  config.vk  filesystem.vk  http.vk  io.vk  keyvalue.vk  logging.vk  messaging.vk  random.vk  sockets.vk  sql.vk
projects/valkyrie-ffi/tests/wasi-cloud-core/wit/: typenames.witx
projects/valkyrie-wit/: Cargo.toml  main.sh  wasmer.toml
projects/valkyrie-wit/src/: lib.rs
projects/valkyrie-wit/src/hosts/: mod.rs
projects/valkyrie-wit/src/parsers/: mod.rs
projects/valkyrie-wit/src/primitive/: mod.rs
projects/valkyrie-wit/src/primitive/integer/: mod.rs
projects/valkyrie-wit/src/v_core/: mod.rs
projects/valkyrie-wit/tests/codegen/: core.html  core.rs
projects/valkyrie-wit/wit/: fraction.wit  host.wit  index.wit  integer.wit  primitive-decimal.wit  primitive-integer.wit
projects/wit-codegen/: Cargo.toml
projects/wit-codegen/src/: helpers.rs  lib.rs
projects/wit-codegen/src/hosts/: decimal.rs  mod.rs
projects/wit-codegen/src/parsers/: mod.rs
projects/wit-codegen/tests/: main.rs
projects/wit-codegen/tests/codegen/: core.html  core.md  core.rs  native.html  native.md  native.rs  number_ffi.rs
projects/wit-codegen/wit/: index.wit  rgba.wit
projects/wit-core/: Cargo.toml  package.json
projects/wit-core/src/: exports.rs  lib.rs
projects/wit-core/src/image_ffi/: mod.rs
projects/wit-core/src/number/: impl_frac.rs  impl_ord.rs  mod.rs  natural.rs
projects/wit-core/src/number-ffi/natural/: mod.rs
projects/wit-core/src/number/integer/: mod.rs
projects/wit-core/src/number/natural/: mod.rs
projects/wit-core/src/number_ffi/: mod.rs
projects/wit-core/src/number_ffi/integer/: mod.rs
projects/wit-core/src/number_ffi/natural/: mod.rs
projects/wit-core/src/text_ffi/: mod.rs
projects/wit-core/tests/: main.rs
projects/wit-image/: Cargo.toml  index.wit
projects/wit-image/src/: lib.rs
projects/wit-image/src/hosts/: mod.rs
projects/wit-image/src/primitive/: mod.rs
projects/wit-image/wit/: decimal.wit  index.wit  integer.wit  primitive-decimal.wit  primitive-integer.wit  rgba.wit  wit.toml
projects/wit-number/: Cargo.toml
projects/wit-number/src/: lib.rs
projects/wit-number/src/hosts/: impl_dec.rs  impl_int.rs  impl_nat.rs  impl_prime.rs  impl_sign.rs  mod.rs  number.rs
projects/wit-number/src/hosts/text/: mod.rs
projects/wit-number/src/primitive/: mod.rs
projects/wit-number/wit/: decimal.wit  fraction.wit  index.wit  integer.wit  prime.wit  wit.toml
projects/wit-text/: Cargo.toml
projects/wit-text/src/: lib.rs
projects/wit-text/src/hosts/: impl_ascii.rs  impl_dec.rs  impl_int.rs  impl_utf8.rs  mod.rs
projects/wit-text/wit/: ascii.wit  index.wit  utf8.wit
projects/wit-z-runner/: Cargo.toml  index.js  index.mjs
projects/wit-z-runner/src/: lib.rs
projects/wit-z-runner/src/hosts/: mod.rs
projects/wit-z-runner/src/values/: mod.rs
projects/wit-z-runner/tests/: hello.wat  main.rs
scripts/: build.sh
