[package]
name = "valkyrie-ffi"
version = "0.0.0"
authors = ["192608617@qq.com"]
edition = "2018"
description = "Convert wit component model to Valkyrie Language"
homepage = "https://github.com/nyar-vm/valkyrie.rs"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-ffi"
license = "MPL-2.0"

[dependencies]
nyar-wasm = "0.0.7"
anyhow = "1.0.83"
wit-component = "0.208.1"
wit-parser = "0.208.1"
tracing = "0.1.40"
convert_case = "0.6.0"


[dev-dependencies]

[build-dependencies]
