[package]
name = "valkyrie-wit"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Generate external type bindings for the valkyrie language"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
itertools = "0.12.1"
heck = "0.5.0"
indexmap = "2.2.6"
anyhow = "1.0.83"
id-arena = "2.2.1"
wit-parser = "0.207.0"
wit-component = "0.207.0"
wit-bindgen-core = "0.24.0"
wit-bindgen-csharp = "0.24.0"
wit-bindgen-teavm-java = "0.24.0"
wit-bindgen-rust = "0.24.0"

[dependencies.valkyrie-types]
version = "0.0.*"
path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-types'

[dependencies.valkyrie-parser]
version = "0.2.*"
path = 'C:\Users\Dell\CLionProjects\valkyrie.rs\projects\valkyrie-parser'


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
