[package]
name = "wit-image"
publish = false
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
wit-bindgen-core = "0.13.1"
wit-bindgen-rust = "0.13.2"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-wasi]
default-args = ["build", "--target", "wasm32-wasi"]