[package]
name = "valkyrie-wit"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
num = { version = "0.4.1", features = ["rand"] }
wit-bindgen = "0.13.0"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
