#cargo-features = ["per-package-target"]

[package]
name = "valkyrie-ffi"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]
#default-target = "wasm32-wasi"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.190"
rand = "0.8.5"
num = { version = "0.4.1", features = ["rand", "serde"] }
image = { version = "0.24.7", features = [] }
wit-bindgen = "0.13.0"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
