[package]
name = "wit-image"
publish = false
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.7"
wit-bindgen = "0.13.0"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-wasi]
default-args = ["build", "--target", "wasm32-wasi"]