[package]
name = "wit-number"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
crate-type = ["cdylib"]

[dependencies]
#rand_core = "0.6.4"
#fastrand = { version = "2.0.1" }
num-traits = "0.2.17"
num-bigint = "0.4.4"
wit-bindgen = "0.13.0"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-wasi]
default-args = ["build", "--target", "wasm32-wasi"]