[package]
name = "wit-test"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
itertools = "0.11.0"
wasmtime = { version = "14.0.3", features = ["component-model"] }
wasmtime-wasi = { version = "14.0.3", features = [] }


[dev-dependencies]

[features]
default = []
